--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # MySQL connection properties
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# spring.datasource.username=root
-# spring.datasource.password=Buster
-# spring.datasource.url=jdbc:mysql://192.168.16.1:3306/testdb?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=Buster
+spring.datasource.url=jdbc:mysql://172.19.80.1:3306/testdb?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 
 # Log JPA queries
 # spring.jpa.show-sql=true
